manifests/oil-monitor/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: oil-monitor
  name: oil-monitor
  namespace: oil-monitor
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oil-monitor
  ports:
  - name: http
    port: 8080
    targetPort: 8080
